2009-04-05  Dave Morrison  <drm@finkproject.org>

	* VERSION: Make fink HEAD always >> 0.29.x, since that has now
	branched.

2009-04-05  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore: compiler_wrapper is now a generated file

2009-04-05  Dave Morrison  <drm@finkproject.org>

	* compiler_wrapper, compiler_wrapper.in, setup.sh, MANIFEST: use 
	architecture-dependent path-prefix on <redacted>
	* bootstrap: provide a new option for adventurous developers

2009-03-31  Dave Morrison  <drm@finkproject.org>

	* setup.sh: FinkVersion.pm.in no longer needs @BASEPATH@ substitution,
	and fink.8.in no longer needs @VERSION@ substitution.
	* inject.pl: create FinkVersion.pm out of FinkVersion.pm.in before
	loading Fink::Bootstrap.  Because this copy of fink is only present
	in order to run Fink::Bootstrap::inject_packages(), we don't care
	about the values of @VERSION@ or @ARCHITECTURE@ -- the actual values
	are not needed -- so we leave those strings as is.

2009-03-30  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST: sync with refactored [boostrap bootstrap-phase2.pl]

2009-03-21  Dave Morrison  <drm@finkproject.org>

	* fink.csh, fink.sh: make sure $osMajorVer(sion) has been defined
	* Makefile, fink.info.in, setup.sh: guarantee that fink itself is 
	running under the correct version of perl (because when 
	Storable::store creates a file under one version of perl, 
	Storable::retrieve cannot always read it under another version)
	* fink.in, setup.sh: more robust substition
	* bootstrap, setup.sh: refactor get_arch().  The fink architecture is 
	now fixed once and for all (at bootstrap, for new installations), with
	value stored in FinkVersion.pm
	* bootstrap, bootstrap-phase2.pl: refactor bootstrap.  We need to
	call a specific version of perl to execute the main script, which 
	varies depending on the OS version and the architecture.

2009-03-17  Dave Morrison  <drm@finkproject.org>

	* fink.info.in, fink.csh, fink.sh, install.sh, MANIFEST: On Darwin 10