@@ -1,3 +1,8 @@
+2009-04-06  Daniel Macks  <dmacks@netspace.org>
+
+	* Notify/XTerm.pm: non-standard implemenation, but need stub here
+	so that fink.conf:NotifyPlugin token can be resolved
+
 2009-04-05  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm, Validation.pm: %a is gone
